<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>adi_iio</name>
  <version>1.0.0</version>
  <description> ROS package to interface with IIO devices </description>
  <maintainer email="adrian.suciu@analog.com">Analog Devices</maintainer>
  <license>Apache License, Version 2.0</license>

  <url type="repository">https://github.com/analogdevicesinc/iio_ros2</url>
  <url type="website">https://analogdevicesinc.github.io/iio_ros2/</url>
  <url type="bugtracker">https://github.com/analogdevicesinc/iio_ros2/issues</url>

  <author email="adrian.suciu@analog.com">Adrian Suciu</author>
  <author email="Adrian.Stanea@analog.com">Adrian Stanea</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <depend>rosidl_typesupport_introspection_cpp</depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>libiio-dev</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_copyright</test_depend>
  <!-- <test_depend>ament_flake8</test_depend> -->
  <test_depend>ament_pep257</test_depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_pytest</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>python3-scipy</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
