<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hwmon</name>
  <version>0.0.0</version>
  <description>Demo example of adi_iio package interfacing with hwmon devices</description>
  <maintainer email="Adrian.Stanea@analog.com">astanea</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>adi_iio</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
